<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="#98000000"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/_8dp"
        android:text="@string/save_video"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sp" />

    <TextView
        android:id="@+id/messageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:padding="@dimen/_20dp"
        android:text="@string/do_you_want_to_save_file"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/saveBTDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/save"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancelBTDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/cancel_"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>