<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_50dp"
        android:paddingBottom="@dimen/_30dp"
        android:paddingLeft="@dimen/_30dp"
        android:paddingRight="@dimen/_30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:layout_marginTop="@dimen/_1dp"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/oldPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:background="@drawable/edittext_selector"
            android:inputType="textPassword"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/new_password"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/newPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:background="@drawable/edittext_selector"
            android:inputType="textPassword"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/confirm_password"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:background="@drawable/edittext_selector"
            android:inputType="textPassword"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_14sp" />

        <Button
            android:id="@+id/changePasswordBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_40dp"
            android:background="@drawable/button_selector"
            android:minHeight="0dp"
            android:padding="@dimen/_10dp"
            android:text="@string/done_capital_d"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp" />

    </LinearLayout>

</ScrollView>